[gd_scene load_steps=7 format=3 uid="uid://rfq7i1bid251"]

[ext_resource type="Script" path="res://Escenas/Scoreboard.gd" id="1_jgbhw"]
[ext_resource type="Texture2D" uid="uid://iwt2mhinad6m" path="res://Assets/Wallpaper.jpg" id="1_yomyd"]
[ext_resource type="Theme" uid="uid://infegbnmvssg" path="res://ButtonTheme.tres" id="2_b4ler"]
[ext_resource type="LabelSettings" uid="uid://cpbfoghc3vo6o" path="res://HUD.tres" id="3_u6b7i"]
[ext_resource type="Theme" uid="uid://cajhu00k24orh" path="res://GameOverUI.tres" id="5_02r6d"]
[ext_resource type="FontFile" uid="uid://bhgxrt1w2x0tf" path="res://SuperMario256.ttf" id="6_v5jse"]

[node name="Node" type="Node"]
script = ExtResource("1_jgbhw")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_yomyd")
expand_mode = 1

[node name="Buttons" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 112.0
offset_top = -157.0
offset_right = 379.0
offset_bottom = 157.0
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Play" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_b4ler")
text = "Jugar"

[node name="Quit" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_b4ler")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Menu 
Principal"
icon_alignment = 1

[node name="Title" type="Label" parent="."]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -814.0
offset_top = 160.0
offset_right = -76.0
offset_bottom = 183.0
grow_horizontal = 0
text = "Tabla de Puntajes"
label_settings = ExtResource("3_u6b7i")
horizontal_alignment = 1

[node name="Leader Board" type="VBoxContainer" parent="Title"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -637.0
offset_top = 30.5
offset_right = -75.0
offset_bottom = 53.5
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Title/Leader Board"]
layout_mode = 2

[node name="Player" type="Label" parent="Title/Leader Board/HBoxContainer"]
layout_direction = 2
layout_mode = 2
text = "Negro"
label_settings = ExtResource("3_u6b7i")

[node name="Score" type="Label" parent="Title/Leader Board/HBoxContainer"]
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 8
text = "0"
label_settings = ExtResource("3_u6b7i")

[node name="Submit" type="Label" parent="."]
offset_left = 326.5
offset_top = 262.5
offset_right = 953.5
offset_bottom = 316.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_02r6d")
text = "Registra tu puntaje"

[node name="LineEdit" type="LineEdit" parent="Submit"]
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -301.0
offset_top = 44.5
offset_right = 11759.0
offset_bottom = 1064.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
theme = ExtResource("5_02r6d")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 300
theme_override_fonts/font = ExtResource("6_v5jse")
theme_override_font_sizes/font_size = 600
placeholder_text = "Ingresa tu nombre"
alignment = 1
caret_force_displayed = true

[node name="Confirm" type="Button" parent="Submit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.5
offset_top = 127.5
offset_right = 127.5
offset_bottom = 178.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_b4ler")
action_mode = 0
text = "Enviar"

[connection signal="pressed" from="Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_quit_pressed"]
[connection signal="text_submitted" from="Submit/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="Submit/Confirm" to="." method="_on_confirm_pressed"]
